--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -48,12 +48,9 @@
         <br/>
         Graduated May 2022
     </p>
-    <p>
-        Test
-    </p>
 
     <p>
-        View full CV <a href="CV.pdf">here.</a>
+        View full CV <a href="CV.pdf">here</a>.
     </p>
 
    </main>
