--- a/islt_7355/index.html
+++ b/islt_7355/index.html
@@ -4,6 +4,7 @@
                <meta charset="utf-8">
                <title>Home</title>
                <link rel="stylesheet" href="style.css">
+               <link rel="nav" href="nav.css">
 </head>
 
 <!--
@@ -15,7 +16,13 @@
         <h1>Home</h1>
    </header>
 
-   <nav></nav>
+   <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href=#projects.html>Projects</a></li>
+    </ul>
+   </nav>
 
    <main>
     <h2>Welcome to my Master’s in Library & Information Science portfolio site!</h2>
