--- a/islt_7355/index.html
+++ b/islt_7355/index.html
@@ -4,7 +4,7 @@
                <meta charset="utf-8">
                <title>Home</title>
                <link rel="stylesheet" href="style.css">
-               <link rel="nav" href="nav.css">
+               <link rel="stylesheet" href="nav.css">
 </head>
 
 <!--
