--- a/islt_7355/index.html
+++ b/islt_7355/index.html
@@ -17,10 +17,18 @@
    </header>
 
    <nav>
+    <p>Home</p>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href=#projects.html>Projects</a></li>
+        <li><a href=#projects.html>Projects</a>
+            <ul>
+                <li><a href=#project1.html>Project 1</a></li>
+                <li><a href=#project2.html>Project 2</a></li>
+                <li><a href=#project3.html>Project 3</a></li>
+                <li><a href=#project4.html>Project 4</a></li>
+            </ul>
+        </li>
     </ul>
    </nav>
 
