--- a/islt_7355/project.html
+++ b/islt_7355/project.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
                <meta charset="utf-8">
-               <title>Page Title</title>
+               <title>Project</title>
                <link rel="stylesheet" href="nav.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
    </header>
 
    <nav>
-    <p>Home</p>
+    <p>Project</p>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
