--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -4,12 +4,30 @@
                <meta charset="utf-8">
                <title>About</title>
 </head>
+
+<!--This is the About page of my MLIS portfolio-->
+
 <body>
     <header>
-        <h1>About</h1>
-   </header>
+    </header>
 
-   <nav></nav>
+   <nav>
+    <p>About</p>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href=#project.html>Projects</a>
+            <ul>
+                <li><a href="project.html">Project 1</a></li>
+                <li><a href=#project2.html>Project 2</a></li>
+                <li><a href=#project3.html>Project 3</a></li>
+                <li><a href=#project4.html>Project 4</a></li>
+            </ul>
+        <li><a href="reflection.html">Personal Reflection</a></li>
+        <li><a href=#contact.html>Contact</a></li>
+        </li>
+    </ul>
+   </nav>
 
    <main>
 
