--- a/islt_7355/index.html
+++ b/islt_7355/index.html
@@ -20,13 +20,15 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href=#projects.html>Projects</a>
+        <li><a href=#project.html>Projects</a>
             <ul>
-                <li><a href=#project1.html>Project 1</a></li>
+                <li><a href="project.html">Project 1</a></li>
                 <li><a href=#project2.html>Project 2</a></li>
                 <li><a href=#project3.html>Project 3</a></li>
                 <li><a href=#project4.html>Project 4</a></li>
             </ul>
+        <li><a href="reflection.html">Personal Reflection</a></li>
+        <li><a href=#contact.html>Contact</a></li>
         </li>
     </ul>
    </nav>
