--- a/islt_7355/project.html
+++ b/islt_7355/project.html
@@ -3,6 +3,7 @@
 <head>
                <meta charset="utf-8">
                <title>Project</title>
+               <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
 </head>
 
