--- a/islt_7355/reflection.html
+++ b/islt_7355/reflection.html
@@ -6,6 +6,15 @@
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
                <style>.indent{text-indent: 50px;}</style>
+               <style>
+                div{
+                    background-color: #BFD5D7;
+                    text-decoration-color: #516769;
+                    text-align: justify;
+                    width: 900px;
+                    margin-left: 100px;
+                }
+               </style>
 </head>
 
 <!--This is the Reflection page of my MLIS portfolio-->
@@ -35,31 +44,31 @@
 
    <main>
         <h2>Spring 2023</h2>
-            <p>
+            <div>
                 <strong>I</strong> was only able to take one course, ISLT 7305: Foundations of Library & Information Science, in my first semester (Spring 2023) as I was working full time. 
                 It provided foundational knowledge about the history and evolution of libraries and information science, beginning with principles, values, and ethics. 
                 Some of the items that stuck with me the most were the various legal issues facing libraries, both historically and currently, and the fact that librarians 
                 began as the arbiters of what information and literature was considered valuable and morally good. It is not a pleasant origin, but it is inspiring to see 
                 how librarianship has grown since then to question the authority on ‘goodness’ and expand access.
-            </p>
+            </div>
 
         <h2>Summer 2023</h2>
-            <p class="indent">
+            <div class="indent">
                 In my second semester, Summer 2023, I took ISLT 7301: Introduction to Information Technology. This course explored the basics of information technology, including 
                 hardware, software, and ILS, database, and encoding standards. It then moved to the human aspect, covering how technology fosters interactions between people and 
                 information. The most memorable portion of this class was the topic I selected for my final project, Digital Rights Management. DRM continues to be a hot topic, 
                 both inside and outside of the information field, as it (combined with the DMCA) undermines various property rights and the legalities around it are still evolving.
-            </p>
+            </div>
 
         <h2>Fall 2023</h2>
-            <p class="indent">
+            <div class="indent">
                 In the Fall semester of 2023 I was able to take two courses, ISLT 7314: Reference Sources & Services and ISLT 7361: Introduction to Digital Media. I learned valuable 
                 reference skills and how to use various sources, which has helped me in the reference work I perform for my job. The Digital Media course provided hands-on experience 
                 in multimedia production techniques. I hope to build on my knowledge from the Digital Media course using what I will learn in my current Web Design & Development course.
-            </p>
+            </div>
         
         <h2>Spring 2024</h2>
-            <p class="indent">
+            <div class="indent">
                 In my most recent semester I took three courses, ISLT 7313: Collection & Access Management, ISLT 7315: Management of Information Agencies, and ISLT 9410: Finding & 
                 Recommending Popular Culture Sources. The Collection & Access Management course covered building and budgeting for collection development, writing a collection 
                 development policy, conducting a community needs assessment, and evaluating collections, with a project covering each area. Management of Information Agencies covered 
@@ -67,9 +76,9 @@
                 investigating the information needs and motivations of media users, appropriate online resources to find diverse media information for users, and evaluating online search 
                 and recommendation systems for popular culture sources, discussing their strengths and weaknesses and how to improve users’ information experiences.
             </br>
+            </br>
                 I am currently considering both academic and public libraries for my future career, with a focus on interlibrary loan.
-
-            </p>
+            </div>
 
 
     
