--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -3,7 +3,7 @@
 <head>
                <meta charset="utf-8">
                <title>About</title>
-               <link rel="stylesheet" href="style.css">
+               <link rel="stylesheet" href="aboutstyle.css">
                <link rel="stylesheet" href="nav.css">
 </head>
 
@@ -33,16 +33,25 @@
 
    <main>
 
-    <h3>Olivia Kays</h3>
-
-    <blockquote>“I have always imagined that paradise will be a kind of library” - <em>Jorge Luis Borges</em></blockquote>
-
+    <!--Section 1 of About page-->
+    <div class="box a">
+    <!--Left aligned section within section 1-->
+    <div class="box b">
+    <h2>Olivia Kays</h2>
     <p>
         I am currently pursuing my Master’s in Library & Information Science online at the <strong>University of Missouri - Columbia</strong>. I expect to graduate in Spring 2025. I earned my undergraduate degrees from the <strong>University of Missouri - Kansas City</strong> in Spring 2022. I have a B.S. in Physics, with an astronomy emphasis, and a B.A. in Spanish Language and Literature.
         <br />
         In my free time, I enjoy reading, spending time with friends and my cats, watching TV, and playing video games. After graduation, I plan to teach English in Spain to improve my Spanish fluency. I aim to work as a librarian in either an academic or public library upon my return. I am considering a focus on <em>resource sharing</em> or other <em>backend services</em>.
     </p>
+    </div>
+    <!--Right aligned section within section 1-->
+    <div class="box c">
+        <blockquote>“I have always imagined that paradise will be a kind of library” - <em>Jorge Luis Borges</em></blockquote>
+    </div>
+    </div>
 
+    <!--Section 2 of About page-->
+    <div class="box d">
     <h3>
         Education
     </h3>
@@ -72,6 +81,12 @@
     <p>
         View full CV <a href="CV.pdf">here</a>.
     </p>
+    </div>
+
+    <!--Section 3 of About page. Holding place for inserting video resume-->
+    <div class="box e">
+
+    </div>
 
    </main>
 
