--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -85,7 +85,7 @@
 
     <!--Section 3 of About page. Holding place for inserting video resume-->
     <div class="box e">
-
+        <h3 style="text-align:center;">Video Resume</h3>
     </div>
 
    </main>
