--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -38,6 +38,7 @@
     <!--Left aligned section within section 1-->
     <div class="box b">
     <h2>Olivia Kays</h2>
+    <h3 style="margin: 5px">Academic Library Fellow</h3>
     <p>
         I am currently pursuing my Master’s in Library & Information Science online at the <strong>University of Missouri - Columbia</strong>. I expect to graduate in Spring 2025. I earned my undergraduate degrees from the <strong>University of Missouri - Kansas City</strong> in Spring 2022. I have a B.S. in Physics, with an astronomy emphasis, and a B.A. in Spanish Language and Literature.
         <br />
