--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -53,7 +53,7 @@
 
     <!--Section 2 of About page-->
     <div class="box d">
-    <h3>
+    <h3 style="font-size: 20px;">
         Education
     </h3>
 
