--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -15,11 +15,12 @@
 
    <nav>
     <p>About</p>
+    <label id="hamburger">&#9776;</label>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href=#project.html>Projects</a>
-            <ul>
+            <ul id="mobileHide">
                 <li><a href="project.html">Project 1</a></li>
                 <li><a href=#project2.html>Project 2</a></li>
                 <li><a href=#project3.html>Project 3</a></li>
@@ -27,7 +28,6 @@
             </ul>
         <li><a href="reflection.html">Personal Reflection</a></li>
         <li><a href=#contact.html>Contact</a></li>
-        </li>
     </ul>
    </nav>
 
@@ -47,6 +47,8 @@
     </div>
     <!--Right aligned section within section 1-->
     <div class="box c">
+        <img src="ImgWithGraphics.png" alt="Profile image with organic shapes" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
+        <!--Profile image with graphics centered using inline CSS-->
         <blockquote>“I have always imagined that paradise will be a kind of library” - <em>Jorge Luis Borges</em></blockquote>
     </div>
     </div>
