--- a/islt_7355/NavTest.html
+++ b/islt_7355/NavTest.html
@@ -11,20 +11,15 @@
     <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle"/>
     <div class="menu">
-      <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href=#project.html>Projects</a>
-              <ul>
-                  <li><a href="project.html">Project 1</a></li>
-                  <li><a href=#project2.html>Project 2</a></li>
-                  <li><a href=#project3.html>Project 3</a></li>
-                  <li><a href=#project4.html>Project 4</a></li>
-              </ul>
-          <li><a href="reflection.html">Personal Reflection</a></li>
-          <li><a href=#contact.html>Contact</a></li>
-          </li>
-      </ul>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href=#project.html>Projects</a>
+              <a href="project.html">Project 1</a>
+              <a href=#project2.html>Project 2</a>
+              <a href=#project3.html>Project 3</a>
+              <a href=#project4.html>Project 4</a>
+          <a href="reflection.html">Personal Reflection</a>
+          <a href=#contact.html>Contact</a>
     </div>
    </nav>
 </body>
