--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -47,8 +47,10 @@
     </div>
     <!--Right aligned section within section 1-->
     <div class="box c">
-        <img src="ImgWithGraphics.png" alt="Profile image with organic shapes" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
+        <img src="ImgWithGraphics.png" alt="Profile image with organic shapes" style="width: 50%; position: relative; top: 50%; left: 50%; transform: translate(-50%, -50%);">
         <!--Profile image with graphics centered using inline CSS-->
+    </div>
+    <div class="box cb">
         <blockquote>“I have always imagined that paradise will be a kind of library” - <em>Jorge Luis Borges</em></blockquote>
     </div>
     </div>
