--- a/islt_7355/project.html
+++ b/islt_7355/project.html
@@ -72,8 +72,9 @@
                 <li>The majority of questions were about checking out books</li>
                 <li>Online questions were substantial more often than in person questions. In person questions were often irrelevant personal questions for the librarian</li>
             </ul>
-            This resulted in updates to our lesson plan and online module. I updated both in order to include information on locating and checking out books, along with 
+        <p>This resulted in updates to our lesson plan and online module. I updated both in order to include information on locating and checking out books, along with 
             other items that were common questions that had previously been unanswered.
+        </p>
 
         </div>
     
