--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -90,12 +90,19 @@
     <!--Section 3 of About page. Holding place for inserting video resume-->
     <div class="box e">
         <h3 style="text-align:center;">Video Resume</h3>
+        <iframe class="eb" src="https://umsystem.hosted.panopto.com/Panopto/Pages/Embed.aspx?id=760f385c-12bc-4c2a-938b-b18a0180f457&autoplay=false&offerviewer=true&showtitle=true&showbrand=true&captions=false&start=0&interactivity=all" height="405" width="720" style= "position: relative; left: 50%; transform: translateX(-50%); border: 1px solid #464646;" allowfullscreen allow="autoplay" aria-label="Panopto Embedded Video Player" aria-description="Video Resume" ></iframe>
     </div>
 
    </main>
 
    <footer>
-        <p>Olivia Kays | <img src="icons8-email-16.png" alt="Email"> orkn3b@umsystem.edu | <img src="icons8-phone-16.png" alt="Phone"> 816-123-4567 | &copy; 2024 Olivia Kays. All rights reserved.</p>
+    <p>Olivia Kays | 
+        <img class="icon" src="icons8-email-16.png" alt="Email">
+        <img class="iconbig" src="icons8-email-50.png" alt="Email"> 
+        orkn3b@umsystem.edu | 
+        <img class="icon" src="icons8-phone-16.png" alt="Phone">
+        <img class="iconbig" src="icons8-phone-50.png" alt="Phone"> 
+        816-123-4567 | &copy; 2024 Olivia Kays. All rights reserved.</p>
         
         <p><a target="_blank" href="https://icons8.com/icon/12580/email">Email</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> |
         <a target="_blank" href="https://icons8.com/icon/9659/phone">Phone</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
