--- a/islt_7355/index.html
+++ b/islt_7355/index.html
@@ -79,7 +79,13 @@
    </main>
 
    <footer>
-    <p>Olivia Kays | <img src="icons8-email-16.png" alt="Email"> orkn3b@umsystem.edu | <img src="icons8-phone-16.png" alt="Phone"> 816-123-4567 | &copy; 2024 Olivia Kays. All rights reserved.</p>
+    <p>Olivia Kays | 
+    <img class="icon" src="icons8-email-16.png" alt="Email">
+    <img class="iconbig" src="icons8-email-50.png" alt="Email"> 
+    orkn3b@umsystem.edu | 
+    <img class="icon" src="icons8-phone-16.png" alt="Phone">
+    <img class="iconbig" src="icons8-phone-50.png" alt="Phone"> 
+    816-123-4567 | &copy; 2024 Olivia Kays. All rights reserved.</p>
     
     <p><a target="_blank" href="https://icons8.com/icon/12580/email">Email</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> |
     <a target="_blank" href="https://icons8.com/icon/9659/phone">Phone</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
