--- a/islt_7355/project.html
+++ b/islt_7355/project.html
@@ -4,7 +4,7 @@
                <meta charset="utf-8">
                <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
                <title>Project 1</title>
-               <link rel="stylesheet" href="project1style.css">
+               <link rel="stylesheet" href="project2style.css">
                <link rel="stylesheet" href="nav.css">
 </head>
 
@@ -13,7 +13,7 @@
 <body>
     
    <nav>
-    <p>Project</p>
+    <p>Project 1</p>
     <label id="hamburger">&#9776;</label>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,9 +21,9 @@
         <li><a href=#project.html>Projects</a>
             <ul id="mobileHide">
                 <li><a href="project.html">Project 1</a></li>
-                <li><a href=#project2.html>Project 2</a></li>
-                <li><a href=#project3.html>Project 3</a></li>
-                <li><a href=#project4.html>Project 4</a></li>
+                <li><a href="project2.html">Project 2</a></li>
+                <li><a href="project3.html">Project 3</a></li>
+                <li><a href="project4.html">Project 4</a></li>
             </ul>
         <li><a href="reflection.html">Personal Reflection</a></li>
         <li><a href=#contact.html>Contact</a></li>
@@ -39,13 +39,22 @@
         <h2>PROJECT 1</h2>
         <h3 style="margin: 5px">INFO LIT QUESTIONS ASSESSMENT</h3>
         <p>
-            COMPETENCY: Assessment of community needs, instruction of users in using informational resources.
+            COMPETENCY:
         </p>
+        <ul>
+            <li>
+                Assessment of community needs, instruction of users in using informational resources.
+            </li>
+        </ul>
         </div>
         <!--Right aligned section within section 1-->
-        <div class="box c">
-            <img src="Project1.jpg" alt="Report cover and results page" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
-            <!--Project images centered using inline CSS-->
+        <div class="box ca">
+            <img src="LA1.jpg" alt="Cover page of Library Questions Assessment Report" style="display: block; margin-top: 30px; margin-left: auto; margin-right: auto; width: 50%;">
+            <!--Project image 1 centered using inline CSS-->
+        </div>
+        <div class="box cb">
+            <img src="LA2.jpg" alt="Results page of Library Questions Assessment Report" style="display: block; margin-top: 70px; margin-left: auto; margin-right: auto; width: 50%;">
+            <!--Project image 2 centered using inline CSS-->
         </div>
         </div>
     
