--- a/islt_7355/NavTest.html
+++ b/islt_7355/NavTest.html
@@ -6,21 +6,24 @@
 </head>
 
 <body>
-  <nav>
-    <p>Home</p>
-    <label for="toggle">&#9776;</label>
-    <input type="checkbox" id="toggle"/>
-    <div class="menu">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href=#project.html>Projects</a>
-              <a href="project.html">Project 1</a>
-              <a href=#project2.html>Project 2</a>
-              <a href=#project3.html>Project 3</a>
-              <a href=#project4.html>Project 4</a>
-          <a href="reflection.html">Personal Reflection</a>
-          <a href=#contact.html>Contact</a>
-    </div>
-   </nav>
+  <header>
+    <nav>
+      <p>Home</p>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+          <ul>
+            <li><a href="#">Project 1</a></li>
+            <li><a href="#">Project 2</a></li>
+            <li><a href="#">Project 3</a></li>
+            <li><a href="#">Project 4</a></li>
+          </ul>
+        <li><a href="#">Reflection</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+     </nav>
+  </header>
+  
 </body>
 
