--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -10,26 +10,28 @@
 
 <!--This is the About page of my MLIS portfolio-->
 
+<header>
+    <nav>
+        <p>About</p>
+        <label id="hamburger">&#9776;</label>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href=#project.html>Projects</a>
+                <ul id="mobileHide">
+                    <li><a href="project.html">Project 1</a></li>
+                    <li><a href="project2.html">Project 2</a></li>
+                    <li><a href="project3.html">Project 3</a></li>
+                    <li><a href="project4.html">Project 4</a></li>
+                </ul>
+            <li><a href="reflection.html">Personal Reflection</a></li>
+            <li><a href=#contact.html>Contact</a></li>
+        </ul>
+       </nav>
+</header>
+
 <body>
     
-   <nav>
-    <p>About</p>
-    <label id="hamburger">&#9776;</label>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href=#project.html>Projects</a>
-            <ul id="mobileHide">
-                <li><a href="project.html">Project 1</a></li>
-                <li><a href=#project2.html>Project 2</a></li>
-                <li><a href=#project3.html>Project 3</a></li>
-                <li><a href=#project4.html>Project 4</a></li>
-            </ul>
-        <li><a href="reflection.html">Personal Reflection</a></li>
-        <li><a href=#contact.html>Contact</a></li>
-    </ul>
-   </nav>
-
    <main>
 
     <!--Section 1 of About page-->
