--- a/islt_7355/index.html
+++ b/islt_7355/index.html
@@ -23,9 +23,9 @@
         <li><a href=#project.html>Projects</a>
             <ul id="mobileHide">
                 <li><a href="project.html">Project 1</a></li>
-                <li><a href=#project2.html>Project 2</a></li>
-                <li><a href=#project3.html>Project 3</a></li>
-                <li><a href=#project4.html>Project 4</a></li>
+                <li><a href="project2.html">Project 2</a></li>
+                <li><a href="project3.html">Project 3</a></li>
+                <li><a href="project4.html">Project 4</a></li>
             </ul>
         <li><a href="reflection.html">Personal Reflection</a></li>
         <li><a href=#contact.html>Contact</a></li>
