--- a/islt_7355/reflection.html
+++ b/islt_7355/reflection.html
@@ -27,7 +27,7 @@
                 <li><a href="project4.html">Project 4</a></li>
             </ul>
         <li><a href="reflection.html">Personal Reflection</a></li>
-        <li><a href=#contact.html>Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
    </nav>
 
