--- a/islt_7355/contact.html
+++ b/islt_7355/contact.html
@@ -69,9 +69,9 @@
             </div>
             
             <div>
-                <label for="message" required><strong>Message</strong></label>
+                <label for="message"><strong>Message</strong></label>
                 <br/>
-                <textarea name="message" id="message" required>Enter your message here</textarea>
+                <textarea name="message" id="message" required></textarea>
             </div>
             <div class="button">
             <button type="reset"><strong>Clear Form</strong></button>
