--- a/islt_7355/about.html
+++ b/islt_7355/about.html
@@ -92,7 +92,8 @@
     <!--Section 3 of About page. Holding place for inserting video resume-->
     <div class="box e">
         <h3 style="text-align:center;">Video Resume</h3>
-        <iframe class="eb" src="https://umsystem.hosted.panopto.com/Panopto/Pages/Embed.aspx?id=760f385c-12bc-4c2a-938b-b18a0180f457&autoplay=false&offerviewer=true&showtitle=true&showbrand=true&captions=false&start=0&interactivity=all" height="405" width="720" style= "position: relative; left: 50%; transform: translateX(-50%); border: 1px solid #464646;" allowfullscreen allow="autoplay" aria-label="Panopto Embedded Video Player" aria-description="Video Resume" ></iframe>
+        <!--<iframe class="eb" src="https://umsystem.hosted.panopto.com/Panopto/Pages/Embed.aspx?id=760f385c-12bc-4c2a-938b-b18a0180f457&autoplay=false&offerviewer=true&showtitle=true&showbrand=true&captions=false&start=0&interactivity=all" height="405" width="720" style= "position: relative; left: 50%; transform: translateX(-50%); border: 1px solid #464646;" allowfullscreen allow="autoplay" aria-label="Panopto Embedded Video Player" aria-description="Video Resume" ></iframe>-->
+        <iframe width="560" height="315" style= "position: relative; left: 50%; transform: translateX(-50%); border: 1px solid #464646;" src="https://www.youtube.com/embed/HqtJPtoz7ys?si=YUO_oi_4UsIsbZgB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
    </main>
