--- a/islt_7355/contact.html
+++ b/islt_7355/contact.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
                <meta charset="utf-8">
+               <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
                <title>Contact</title>
                <link rel="stylesheet" href="contactstyle.css">
                <link rel="stylesheet" href="nav.css">
