--- a/islt_7355/project3.html
+++ b/islt_7355/project3.html
@@ -10,26 +10,28 @@
 
 <!--This is the Project 1 page of my MLIS portfolio-->
 
-<body>
+<header>
+    <nav>
+        <p>Project 3</p>
+        <label id="hamburger">&#9776;</label>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href=#project.html>Projects</a>
+                <ul id="mobileHide">
+                    <li><a href="project.html">Project 1</a></li>
+                    <li><a href="project2.html">Project 2</a></li>
+                    <li><a href="project3.html">Project 3</a></li>
+                    <li><a href="project4.html">Project 4</a></li>
+                </ul>
+            <li><a href="reflection.html">Personal Reflection</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+       </nav>
     
-   <nav>
-    <p>Project 3</p>
-    <label id="hamburger">&#9776;</label>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href=#project.html>Projects</a>
-            <ul id="mobileHide">
-                <li><a href="project.html">Project 1</a></li>
-                <li><a href="project2.html">Project 2</a></li>
-                <li><a href="project3.html">Project 3</a></li>
-                <li><a href="project4.html">Project 4</a></li>
-            </ul>
-        <li><a href="reflection.html">Personal Reflection</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-   </nav>
+</header>
 
+<body>
    <main>
 
     <!--Section 1 of Project page-->
